@@ -154,6 +154,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add CSS defintion of the 'wikitable' class to shared.css
 * (bug 17163) Added MediaWiki:Talkpage which will be displayed when viewing talk
   pages
+* Add group convertsion support for LanguageConverter. New magic word "{{GROUPCONVERT:xxx}}"
+  enabled for this new feature. You can set related conversion rules in
+  [[MediaWiki:Groupconversiontable-xxx]].
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
